Another fix for scrollbars showing up when they shouldn't

--- a/popup/tabfind.css
+++ b/popup/tabfind.css
@@ -60,7 +60,7 @@ body.wide {
 
 #tabs-list {
 	width: 100%;
-	height: 483px;
+	height: 482px;
 	overflow-y: auto;
 	padding: 0;
 	margin: 0;
